--- a/001-recipes/sources.css
+++ b/001-recipes/sources.css
@@ -1,9 +1,40 @@
+:root {
+    --main-color: hsl(240deg 20% 90%);
+    --main-bg-color: hsl(240deg 10% 20%);
+}
+
 body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: hsl(240deg 10% 20%);
+    background-color: var(--main-bg-color);
+    color: var(--main-color);
 }
 
 .title {
-    color: hsl(240deg 20% 90%);
     text-align: center;
+    margin-bottom: 50px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.link {
+    text-decoration: none;
+    color: var(--main-color);
+    padding: 10px 20px;
+    border: 1px solid var(--main-color);
+    border-radius: 5px;
+}
+
+.link:hover {
+    color: var(--main-bg-color);
+    background-color: var(--main-color);
 }
