--- a/002-landing-page/sources.css
+++ b/002-landing-page/sources.css
@@ -76,6 +76,11 @@
  *  https://www.theodinproject.com/lessons/foundations-landing-page
  */
 
+ :root {
+    --main-content-width: 85%;
+    --main-content-max-width: 1000px;
+ }
+
 .header-dark-bg,
 .footer-dark-bg {
     background-color: #1F2937;
@@ -101,4 +106,24 @@ body {
 .footer {
     flex: 0 0 50px;
     margin-top: auto;
+}
+
+/*
+ * From the design, content should be centered in the page. Extrapolating
+ * from there, I would like the content to be dynamic but have a fixed
+ * max-width.
+ */
+.centering {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.with-max-width {
+    width: var(--main-content-width);
+    max-width: var(--main-content-max-width);
+}
+
+.header .container {
+    flex: 1 1 auto;
 }
