--- a/002-landing-page/sources.css
+++ b/002-landing-page/sources.css
@@ -86,6 +86,28 @@
     background-color: #1F2937;
 }
 
+.hero-main-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.hero-secondary-text,
+.header-link-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.header-logo-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
 /* main layout */
 
 body {
