Add background color to quote section

--- a/002-landing-page/sources.css
+++ b/002-landing-page/sources.css
@@ -127,6 +127,10 @@ button.sign-up {
     color: #1F2937;
 }
 
+.quote-light-bg {
+    background-color: #E5E7EB;
+}
+
 /* main layout */
 
  :root {
