--- a/003-rock-paper-scissors/styles.css
+++ b/003-rock-paper-scissors/styles.css
@@ -17,3 +17,17 @@ kbd > kbd {
     padding: 1px 2px 0;
     border: 1px solid var(--main-color);
 }
+
+button {
+    font-size: 24px;
+    padding: 5px 20px;
+    background-color: var(--main-background-color);
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: var(--main-color);
+    color: var(--main-background-color);
+}
