--- a/004-etch-a-sketch/styles.css
+++ b/004-etch-a-sketch/styles.css
@@ -52,6 +52,9 @@
 
 .grid {
     height: var(--content-width); /* square grid */
+    border: 2px solid #111;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .grid-row {
