--- a/005-calculator/styles.css
+++ b/005-calculator/styles.css
@@ -1,14 +1,24 @@
 :root {
     --main-color: hsl(240deg 10% 90%);
     --main-background-color: hsl(240deg 10% 20%);
-    --main-size-basis: max(40px, min(18vh, 18vw));
-    --button-border: 2px solid var(--main-color);
-    --button-border-radius: 5px;
+    --display-background-color: hsl(240deg 10% 30%);
+    --display-color: hsl(240deg 10% 80%);
+
+    --num-rows: 6;
+    --num-cols: 4;
+    --basis-qty: max(var(--num-rows), var(--num-cols));
+    --basis-dimension: min(100vh, 100vw);
+    --basis-size: calc(var(--basis-dimension) / var(--basis-qty));
+    --basis-size-adjusted: calc(0.90 * var(--basis-size));
+
+    --main-size-basis: max(40px, var(--basis-size-adjusted));
     --button-size-basis: calc(0.9 * var(--main-size-basis));
     --button-gap-size: calc(0.1 * var(--main-size-basis));
     --button-font-size: calc(0.5 * var(--button-size-basis));
-    --num-rows: 5;
-    --num-cols: 4;
+    --display-height: calc(2 * var(--button-size-basis));
+
+    --button-border: 2px solid var(--main-color);
+    --button-border-radius: 5px;
 }
 
 /* shared classes */
@@ -35,6 +45,7 @@ body {
 
 #root {
     height: calc(var(--num-rows) * var(--main-size-basis));
+    gap: var(--button-gap-size);
 }
 
 .button-row {
@@ -43,6 +54,7 @@ body {
     gap: var(--button-gap-size);
 }
 
+#display,
 .button {
     flex: 1 1 var(--button-size-basis);
     height: var(--button-size-basis);
@@ -50,6 +62,16 @@ body {
     font-weight: 300;
     border: var(--button-border);
     border-radius: var(--button-border-radius);
+}
+
+#display {
+    align-items: flex-end;
+    justify-content: space-around;
+    color: var(--display-color);
+    background-color: var(--display-background-color);
+    border: none;
+    height: var(--display-height);
+    padding: var(--button-gap-size);
 }
 
 .button:hover {
