--- a/005-calculator/styles.css
+++ b/005-calculator/styles.css
@@ -4,7 +4,7 @@
     --display-background-color: hsl(240deg 10% 30%);
     --display-color: hsl(240deg 10% 80%);
 
-    --num-rows: 6;
+    --num-rows: 5.5;
     --num-cols: 4;
     --basis-qty: max(var(--num-rows), var(--num-cols));
     --basis-dimension: min(100vh, 100vw);
@@ -15,7 +15,7 @@
     --button-size-basis: calc(0.9 * var(--main-size-basis));
     --button-gap-size: calc(0.1 * var(--main-size-basis));
     --button-font-size: calc(0.5 * var(--button-size-basis));
-    --display-height: calc(2 * var(--button-size-basis));
+    --display-height: calc(1.5 * var(--button-size-basis));
 
     --button-border: 2px solid var(--main-color);
     --button-border-radius: 5px;
@@ -48,6 +48,7 @@ body {
     gap: var(--button-gap-size);
 }
 
+#display,
 .button-row {
     flex: 1 0 auto;
     width: calc(var(--num-cols) * var(--main-size-basis));
@@ -56,23 +57,28 @@ body {
 
 #display,
 .button {
-    flex: 1 1 var(--button-size-basis);
-    height: var(--button-size-basis);
     font-size: var(--button-font-size);
     font-weight: 300;
-    border: var(--button-border);
     border-radius: var(--button-border-radius);
 }
 
 #display {
     align-items: flex-end;
     justify-content: space-around;
-    font-family: "Kode Mono", monospace;
     color: var(--display-color);
     background-color: var(--display-background-color);
-    border: none;
     height: var(--display-height);
-    padding: var(--button-gap-size);
+}
+
+.display-text {
+    font-family: "Kode Mono", monospace;
+    padding: 0 var(--button-gap-size);
+}
+
+.button {
+    flex: 1 1 var(--button-size-basis);
+    border: var(--button-border);
+    height: var(--button-size-basis);
 }
 
 .button:hover {
