Prevent user from highlighting button text

--- a/005-calculator/styles.css
+++ b/005-calculator/styles.css
@@ -55,6 +55,10 @@ body {
     gap: var(--button-gap-size);
 }
 
+.button-row {
+    user-select: none;
+}
+
 #display,
 .button {
     font-size: var(--button-font-size);
