--- a/006-sign-up-form/styles.css
+++ b/006-sign-up-form/styles.css
@@ -18,6 +18,7 @@
     --submit-button-background-color: #596D48;
     --submit-button-background-color-hover: #6D815B;
     --submit-button-background-color-active: #495C38;
+    --input-border-color-on-focus: #1D4ED8;
 }
 
 * {
@@ -153,6 +154,12 @@ form > button[type="submit"] {
     border: 1px solid #EAEAEA;
     border-radius: 3px;
     width: 25rch;
+}
+
+.input-card input:focus {
+    outline: none; /* remove default focus behavior */
+    border: 1px solid var(--input-border-color-on-focus);
+    box-shadow: var(--content-box-shadow);
 }
 
 form > button[type="submit"] {
