Add space below image attribution text

--- a/006-sign-up-form/styles.css
+++ b/006-sign-up-form/styles.css
@@ -70,6 +70,7 @@ body {
 
 .logo-container .image-attribution {
     margin-top: auto;
+    margin-bottom: 1rem;
     color: var(--image-attribution-font-color);
     font-family: var(--content-font-stack);
     font-size: 0.7rem;
