--- a/007-admin-dashboard/styles.css
+++ b/007-admin-dashboard/styles.css
@@ -3,6 +3,8 @@
     --header-background-color: #FFFFFF;
     --content-background-color: #E3E8F0;
     --accent-color: #E9B636;
+    --card-text-color-dark: #000000;
+    --card-text-color-light: #636363;
 }
 
 * {
@@ -187,6 +189,7 @@ body {
     font-size: 1.2rem;
     font-weight: 700;
     margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .content > * {
@@ -209,20 +212,75 @@ body {
     grid-column: 2;
 }
 
-.content .card-container {
-    flex: 1 1 auto;
+.content .card {
+    background-color: var(--header-background-color);
+    border-radius: 0.5rem;
+    box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.1);
 }
 
 .content .projects .card-container {
-    background-color: lightcoral;
+    flex: 1 1 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 1rem;
 }
 
-.content .announcements .card-container {
-    background-color: lightblue;
+.content .announcements .card {
+    flex: 0 0 auto;
+    padding: 1rem;
 }
 
-.content .trending .card-container {
-    background-color: lightseagreen;
+.content .announcements .announcement-card .title {
+    color: var(--card-text-color-dark);
+    font-weight: 600;
+}
+
+.content .announcements .announcement-card .summary {
+    color: var(--card-text-color-light);
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+}
+
+.content .announcements .announcement-card:last-child .summary {
+    border-bottom: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.content .trending .card {
+    flex: 0 0 auto;
+    padding: 1rem;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.content .trending .trending-project {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.content .trending .trending-project .profile-image{
+    background-color: var(--accent-color);
+    --radius: 1.4rem;
+    height: calc(2 * var(--radius));
+    width: calc(2 * var(--radius));
+    border-radius: var(--radius);
+}
+
+.content .trending .trending-project .user-tag {
+    color: var(--card-text-color-dark);
+    font-weight: 500;
+    margin-bottom: 3px;
+}
+
+.content .trending .trending-project .project-name {
+    color: var(--card-text-color-light);
+    font-size: 0.9rem;
 }
 
 img.icon {
