--- a/007-admin-dashboard/styles.css
+++ b/007-admin-dashboard/styles.css
@@ -28,7 +28,6 @@ body {
     color: var(--header-background-color);
     grid-row: 1 / -1;
     grid-column: 1;
-    padding: 1rem;
 
     display: flex;
     flex-direction: column;
@@ -39,7 +38,8 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 1rem;
+    gap: 0.3rem;
+    padding: 1rem;
 }
 
 .sidebar .logo img {
@@ -47,7 +47,7 @@ body {
 }
 
 .sidebar .logo p {
-    font-size: 1.7rem;
+    font-size: 1.9rem;
     font-weight: 500;
 }
 
@@ -62,7 +62,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
-    padding: 4px 0;
+    padding: 0.7rem 2rem;
 }
 
 .sidebar ul .icon {
