Update colors to match reference

--- a/007-admin-dashboard/styles.css
+++ b/007-admin-dashboard/styles.css
@@ -1,8 +1,8 @@
 :root {
-    --sidebar-background-color: #3E91D2;
+    --sidebar-background-color: #1992D4;
     --header-background-color: #FFFFFF;
     --content-background-color: #E3E8F0;
-    --accent-color: #E9B636;
+    --accent-color: #FACC15;
     --card-text-color-dark: #000000;
     --card-text-color-light: #636363;
 }
